[tool.poetry]
name = "-build"
version = "0.1.0"
description = ""
authors = ["Jose Diaz-Gonzalez <email@josediazgonzalez.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.43"
mkdocs-material-extensions = "^1.3.1"
mkdocs-exclude = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
